--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,13 @@ section:hover{
   background-color: #79C0E7;
 }
 
+.line{
+  border-left: 8px solid #B5DCF4;
+  bottom: -30px;
+  position: absolute;
+  top: 25px;
+  left: 170px;
+}
 
 .date{
   font-size: 15px;
@@ -55,13 +62,7 @@ section:hover{
   font-size: 38px;
   color: #3B81A8;
 }
-.line{
-  border-left: 8px solid #B5DCF4;
-  height: 591px;
-  position: absolute;
-  top: 48px;
-  left: 190px;
-}
+
 .section:before{
   content: "";
   display: block;
